Fix button loading animation on mobile

--- a/src/Components/CoolButton.scss
+++ b/src/Components/CoolButton.scss
@@ -16,6 +16,13 @@ $color2: #cfcfcf;
   }
 }
 
+a.btn {
+  color: $color1;
+}
+
+a.btn:hover {
+  color: $color1;
+}
 
 .btn {
   display: block;
@@ -27,7 +34,7 @@ $color2: #cfcfcf;
   cursor: pointer;
   outline: none;
   font-size: 18px;
-  color: $color1 !important;
+  color: $color1;
   font-size: large;
   font-weight: 500;
   height: fit-content;
@@ -66,5 +73,48 @@ $color2: #cfcfcf;
   &:hover:before {
     width: 100%;
     height: 100%;
+  }
+}
+
+//Loading
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 20px;
+  height: 20px;
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  margin: 2px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
